# mm-dashboards

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
assets/: vis_pose_sod1_onionnet_1.html  vis_pose_sod1_onionnet_10.html  vis_pose_sod1_onionnet_11.html  vis_pose_sod1_onionnet_12.html  vis_pose_sod1_onionnet_13.html  vis_pose_sod1_onionnet_14.html  vis_pose_sod1_onionnet_15.html  vis_pose_sod1_onionnet_16.html  vis_pose_sod1_onionnet_17.html  vis_pose_sod1_onionnet_18.html  vis_pose_sod1_onionnet_19.html  vis_pose_sod1_onionnet_2.html  vis_pose_sod1_onionnet_20.html  vis_pose_sod1_onionnet_3.html  vis_pose_sod1_onionnet_4.html  vis_pose_sod1_onionnet_5.html  vis_pose_sod1_onionnet_6.html  vis_pose_sod1_onionnet_7.html  vis_pose_sod1_onionnet_8.html  vis_pose_sod1_onionnet_9.html  vis_pose_tdp43_diffdock_1.html  vis_pose_tdp43_diffdock_10.html  vis_pose_tdp43_diffdock_11.html  vis_pose_tdp43_diffdock_12.html  vis_pose_tdp43_diffdock_14.html  vis_pose_tdp43_diffdock_18.html  vis_pose_tdp43_diffdock_20.html  vis_pose_tdp43_diffdock_3.html  vis_pose_tdp43_diffdock_4.html  vis_pose_tdp43_diffdock_5.html  vis_pose_tdp43_diffdock_6.html  vis_pose_tdp43_diffdock_7.html  vis_pose_tdp43_diffdock_8.html  vis_pose_tdp43_diffdock_9.html  vis_poses_13.html  vis_poses_15.html  vis_poses_16.html  vis_poses_17.html  vis_poses_19.html  vis_poses_2.html
data/: rank1_confidence-0.05.sdf  rank1_confidence-1.77.sdf
src/: dashboard.py  server.py  vs_helios_sod1_onionent_dashboard.py  vs_protease_tdp43_dashboard.py
